feat(library): add hierarchical event selection
